@@ -1,8 +1,9 @@
 package ru.job4j;
 
 import org.junit.Test;
-import java.util.List;
 
+import java.util.Arrays;
+import java.util.List;
 import static org.hamcrest.core.Is.is;
 import static org.junit.Assert.assertThat;
 
@@ -10,15 +11,13 @@ public class StudentTest {
     @Test
     public void whenTreeScopeMoreBount() {
         Student student = new Student();
-        List input = List.of(
-                new Student("Vera", 86),
-                new Student("Kate", 75),
-                new Student("Roman", 80),
-                new Student("Bob", 93),
-                new Student(null, 0));
-        List rst = student.levelOf(input, 85);
-        assertThat(rst, is(List.of(
-                new Student("Bob", 93),
-                new Student("Vera", 86))));
+        Person Vera = new Person("Vera", 86);
+        Person Kate = new Person("Kate", 75);
+        Person Nikita = new Person("Nikita", 96);
+        Person Roman = new Person("Roman", 80);
+        Person Bob = new Person("Bob", 93);
+        List<Person> input = Arrays.asList(Vera, Kate, null, Nikita, null, Roman, Bob);
+        List<Person> rst = student.levelOf(input, 85);
+        assertThat(rst, is(List.of(Nikita, Bob, Vera)));
     }
 }
